--- a/Blog-using-mean-master/package.json
+++ b/Blog-using-mean-master/package.json
@@ -16,7 +16,9 @@
         "express": "^4.17.1",
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^5.10.4",
-        "multer": "^1.4.2"
+        "multer": "^1.4.2",
+        "rxjs": "^7.5.5",
+        "rxjs-compat": "^6.6.7"
     },
     "devDependencies": {
         "nodemon": "^2.0.4"
